--- a/html/contacto.html
+++ b/html/contacto.html
@@ -16,13 +16,13 @@
                     <a class="nav-menu-link nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a class="nav-menu-link nav-link" href="./galery.html">Galery</a>
+                    <a class="nav-menu-link nav-link" href="../index.html">Gallery</a>
                 </li>
                 <li class="nav-menu-item">
                     <a class="nav-menu-link nav-link" href="./aboutus.html">About Us</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a class="nav-menu-link nav-link" href="./contact.html">Contact</a>
+                    <a class="nav-menu-link nav-link" href="./contacto.html">Contact</a>
                 </li>
                 <li class="nav-menu-item">
                     <a class="nav-menu-link nav-link" href="./shop.html">Shop</a>
