--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="./css/bootstrap.css"> -->
     <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
@@ -54,6 +54,6 @@
         <p class="text">@Instagram</p>
         <p class="text">@Facebook</p>
     </footer>
-    <script src="./js/bootstrap.bundle.js"></script>
+    <!-- <script src="./js/bootstrap.bundle.js"></script> -->
 </body>
 </html>
