--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
                 <li class="nav-menu-item">
                     <a class="nav-menu-link nav-link" href="./nav/gallery.html">Galery</a>
                 </li>
+                <li class="nav-menu-item">
+                    <a class="nav-menu-link nav-link" href="./nav/contacto.html">Contacto</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a class="nav-menu-link nav-link" href="./nav/shop.html">Shop</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a class="nav-menu-link nav-link" href="./nav/sobrenosotros.html">Sobre Nosotros</a>
+                </li>
             </ul>
         </nav>
     </header>
