--- a/nav/contacto.html
+++ b/nav/contacto.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto</title>
-    <link rel="stylesheet" href="../css/gallery.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/contacto.css">
 </head>
 <body>
     <header class="header">
@@ -34,28 +31,27 @@
         </nav>
     </header>
 
-    <div>
+    <main>
         <article>
             <section class="section">
-                <h2 class="h2">Nuestra Galeria</h2>
-            </section> 
+                <img class="img" src="../img/img_1.jpeg" alt="x">
+                <img class="img" src="../img/img_1.jpeg" alt="x">
+            </section>    
             <section class="section2">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="imghide" src="../img/img_2.jpeg" alt="Cotillon">
-            </section>
+                <p class="p">Direccion, mail, telefono fijo, whatsapp, horarios, etc...</p>
+            </section>    
+            <section class="section">
+                <img class="img" src="../img/img_1.jpeg" alt="x">
+                <img class="img" src="../img/img_1.jpeg" alt="x">
+            </section >
+                
         </article>
-    </div>
-
+    
+    </main>
     <footer class="footer">
-        <p class="text">@Instagram</p>
-        <p class="text">@Facebook</p>
+        <p class="text">Instagram</p>
+        <p class="text">Facebook</p>
     </footer>
+
 </body>
 </html>
