--- a/nav/shop.html
+++ b/nav/shop.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto</title>
-    <link rel="stylesheet" href="../css/gallery.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/shop.css">
 </head>
 <body>
     <header class="header">
@@ -34,28 +31,27 @@
         </nav>
     </header>
 
-    <div>
-        <article>
+    <article>
+        <div>
             <section class="section">
-                <h2 class="h2">Nuestra Galeria</h2>
-            </section> 
-            <section class="section2">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="imghide" src="../img/img_2.jpeg" alt="Cotillon">
+                <h2 class="h2">Nuestras Categorias</h2>
+                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
+                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
+                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
+                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
+                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
+                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
+                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
+                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
+                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
+                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
             </section>
-        </article>
-    </div>
+        </div>
+    </article>
 
     <footer class="footer">
-        <p class="text">@Instagram</p>
-        <p class="text">@Facebook</p>
+        <p class="text">Instagram</p>
+        <p class="text">Facebook</p>
     </footer>
 </body>
 </html>
