--- a/nav/sobrenosotros.html
+++ b/nav/sobrenosotros.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto</title>
-    <link rel="stylesheet" href="../css/gallery.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/sobrenosotros.css">
 </head>
 <body>
     <header class="header">
@@ -34,28 +31,41 @@
         </nav>
     </header>
 
-    <div>
+    <main>
         <article>
             <section class="section">
-                <h2 class="h2">Nuestra Galeria</h2>
-            </section> 
-            <section class="section2">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="imghide" src="../img/img_2.jpeg" alt="Cotillon">
+                <h2 class="h2">Sobre Nosotros</h2>
             </section>
         </article>
-    </div>
+        <section class="section-flex">
+            <div class="div">
+                <h3 class="h3"> Titulo</h3>
+                <p class="p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi unde voluptas molestiae suscipit deserunt eligendi corrupti repudiandae eos laudantium
+                </p>
+            </div>
+            <div class="div">
+                <img class="img" src="../img/img_2.jpeg" alt="x">
+            </div>
+        </section>
+
+    <!-- --------------------------------- -->
+
+        <section class="section-flex">
+            <div class="div">
+                <img class="img" src="../img/img_2.jpeg" alt="x">
+            </div>
+            <div class="div">
+                <h3 class="h3"> Titulo</h3>
+                <p class="p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi unde voluptas molestiae suscipit deserunt eligendi corrupti repudiandae eos laudantium
+                </p>
+            </div>
+        </section>
+        
+    </main>
 
     <footer class="footer">
-        <p class="text">@Instagram</p>
-        <p class="text">@Facebook</p>
+        <p class="text">Instagram</p>
+        <p class="text">Facebook</p>
     </footer>
 </body>
 </html>
