PF Garcia Agustin

--- a/nav/contacto.html
+++ b/nav/contacto.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto</title>
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/contacto.css">
 </head>
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="./index.html" class="logo">Logo</a>
+            <a href="./index.html" class="logo">Cotillon Multicolor</a>
             <ul class="nav-menu">
                 <li class="nav-menu-item">
                     <a class="nav-menu-link nav-link" href="../index.html">Home</a>
@@ -31,27 +33,47 @@
         </nav>
     </header>
 
-    <main>
+    <main class="container">
         <article>
+            <div class="div">
+                <h2 class="h2">Ven a Visitarnos</h2>
+            </div>
             <section class="section">
-                <img class="img" src="../img/img_1.jpeg" alt="x">
-                <img class="img" src="../img/img_1.jpeg" alt="x">
+                <figure>
+                    <img class="img" src="../img/gallery2.jpg" alt="x">
+                </figure>
+                <figure>
+                    <img class="img" src="../img/img_1.jpeg" alt="x">
+                </figure>
             </section>    
-            <section class="section2">
-                <p class="p">Direccion, mail, telefono fijo, whatsapp, horarios, etc...</p>
-            </section>    
+            <section >
+                <ul>
+                    <li>Podes encontrarnos en Av Calle Falsa 1234</li>
+                    <li>Contactanos a nuestro mail @gmail.com</li>
+                    <li>Podes comunicarte con nosotros via wpp o llamado telefonico al 123456789</li>
+                    <li>Nuestros horarios de atencion son de 10hs a 19hs</li>
+                </ul>
+            </section>
             <section class="section">
-                <img class="img" src="../img/img_1.jpeg" alt="x">
-                <img class="img" src="../img/img_1.jpeg" alt="x">
-            </section >
-                
+                <figure>
+                    <img class="img" src="../img/halloween_img.jpeg" alt="x">
+                </figure>
+                <figure>
+                    <img class="img" src="../img/img_3.jpg" alt="x">
+                </figure>
+            </section >       
         </article>
-    
     </main>
     <footer class="footer">
-        <p class="text">Instagram</p>
-        <p class="text">Facebook</p>
+        <div class="footer__item">
+            <a class="text" href="https://www.facebook.com">@facebook</a>
+            <a class="text" href="https://www.instagram.com">@instagram</a>
+        </div>
+        <div class="footer__item container">
+            <p class="p">Para mas informacion contactanos a <a class="a" href="numero de telefono">"1234567890"</a></p>
+            <p class="p">Tambien podes visitar nuestro local en Av Calle Falsa 1234</p>
+        </div>
     </footer>
-
+    <script src="../js/bootstrap.bundle.js"></script>
 </body>
 </html>
