--- a/nav/gallery.html
+++ b/nav/gallery.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto</title>
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/gallery.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +14,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="./index.html" class="logo">Logo</a>
+            <a href="./index.html" class="logo">Cotillon Multicolor</a>
             <ul class="nav-menu">
                 <li class="nav-menu-item">
                     <a class="nav-menu-link nav-link" href="../index.html">Home</a>
@@ -34,28 +35,38 @@
         </nav>
     </header>
 
-    <div>
-        <article>
-            <section class="section">
-                <h2 class="h2">Nuestra Galeria</h2>
-            </section> 
-            <section class="section2">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="img" src="../img/img_2.jpeg" alt="Cotillon">
-                <img class="imghide" src="../img/img_2.jpeg" alt="Cotillon">
-            </section>
-        </article>
+    <div class="div">
+        <section class="section">
+            <h2 class="h2">Nuestra Galeria</h2>
+        </section> 
+        <section>
+            <figure>
+                <img class="img" src="../img/gallery13.jpg" alt="Cotillon">
+                <img class="img" src="../img/gallery2.jpg" alt="Cotillon">
+                <img class="img" src="../img/gallery3.jpg" alt="Cotillon">
+                <img class="img" src="../img/gallery4.jpg" alt="Cotillon">
+                <img class="img" src="../img/gallery5.jpg" alt="Cotillon">
+                <img class="img" src="../img/gallery6.jpg" alt="Cotillon">
+                <img class="img" src="../img/gallery7.jpg" alt="Cotillon">
+                <img class="img" src="../img/gallery8.jpg" alt="Cotillon">
+                <img class="img" src="../img/gallery9.jpg" alt="Cotillon">
+                <img class="img" src="../img/gallery10.jpg" alt="Cotillon">
+                <img class="img" src="../img/gallery11.jpg" alt="Cotillon">
+                <img class="img" src="../img/gallery12.jpg" alt="Cotillon">
+            </figure>
+        </section>
     </div>
 
     <footer class="footer">
-        <p class="text">@Instagram</p>
-        <p class="text">@Facebook</p>
+        <div class="footer__item">
+            <a class="text" href="https://www.facebook.com">@facebook</a>
+            <a class="text" href="https://www.instagram.com">@instagram</a>
+        </div>
+        <div class="footer__item container">
+            <p class="p">Para mas informacion contactanos a <a class="a" href="numero de telefono">"1234567890"</a></p>
+            <p class="p">Tambien podes visitar nuestro local en Av Calle Falsa 1234</p>
+        </div>
     </footer>
+    <script src="../js/bootstrap.bundle.js"></script> 
 </body>
 </html>
