--- a/nav/shop.html
+++ b/nav/shop.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto</title>
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/shop.css">
 </head>
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="./index.html" class="logo">Logo</a>
+            <a href="./index.html" class="logo">Cotillon Multicolor</a>
             <ul class="nav-menu">
                 <li class="nav-menu-item">
                     <a class="nav-menu-link nav-link" href="../index.html">Home</a>
@@ -31,27 +33,50 @@
         </nav>
     </header>
 
-    <article>
-        <div>
+    <div>
+        <article>
             <section class="section">
-                <h2 class="h2">Nuestras Categorias</h2>
-                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
-                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
-                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
-                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
-                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
-                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
-                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
-                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
-                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
-                <img class="img" src="../img/img_2.jpeg" alt="x" width="300px" height="300px">
+                <h2 class="subtitulo">Nuestra Categorias</h2>
             </section>
-        </div>
-    </article>
+            <section class="sectionimg">
+                <figure>
+                    <img class="img" src="../img/coco_img.jpg" alt="coco">
+                    <p class="nombre">"Coco"</p>
+                </figure>
+                <figure>
+                    <img class="img" src="../img/encanto_img.jpg" alt="encanto">
+                    <p class="nombre">"Encanto"</p>
+                </figure>
+                <figure>
+                    <img class="img" src="../img/increibles_img.jpg" alt="los increibles">
+                    <p class="nombre">"Increibles"</p>
+                </figure>
+                <figure>
+                    <img class="img" src="../img/moana_img.jpg" alt="moana">
+                    <p class="nombre">"Moana"</p>
+                </figure>
+                <figure>
+                    <img class="img" src="../img/monsters_img.jpg" alt="monsters inc">
+                    <p class="nombre">"Monsters"</p>
+                </figure>
+                <figure>
+                    <img class="img" src="../img/zootopia_img.jpg" alt="zootopia">
+                    <p class="nombre">"Zootopia"</p>
+                </figure>
+            </section>
+        </article>
+    </div>
 
     <footer class="footer">
-        <p class="text">Instagram</p>
-        <p class="text">Facebook</p>
+        <div class="footer__item">
+            <a class="text" href="https://www.facebook.com">@facebook</a>
+            <a class="text" href="https://www.instagram.com">@instagram</a>
+        </div>
+        <div class="footer__item container">
+            <p class="p">Para mas informacion contactanos a <a class="a" href="numero de telefono">"1234567890"</a></p>
+            <p class="p">Tambien podes visitar nuestro local en Av Calle Falsa 1234</p>
+        </div>
     </footer>
+<script src="../js/bootstrap.bundle.js"></script>
 </body>
 </html>
