--- a/nav/sobrenosotros.html
+++ b/nav/sobrenosotros.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto</title>
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/sobrenosotros.css">
 </head>
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="./index.html" class="logo">Logo</a>
+            <a href="./index.html" class="logo">Cotillon Multicolor</a>
             <ul class="nav-menu">
                 <li class="nav-menu-item">
                     <a class="nav-menu-link nav-link" href="../index.html">Home</a>
@@ -31,41 +33,48 @@
         </nav>
     </header>
 
-    <main>
+    <main class="container">
         <article>
             <section class="section">
-                <h2 class="h2">Sobre Nosotros</h2>
+                <h1 class="titulo">Acerca de Nosotros</h1>
             </section>
         </article>
         <section class="section-flex">
             <div class="div">
-                <h3 class="h3"> Titulo</h3>
-                <p class="p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi unde voluptas molestiae suscipit deserunt eligendi corrupti repudiandae eos laudantium
+                <h3 class="h3">"Como Empezamos"</h3>
+                <p class="p">Empezamos siendo un local del monton y sin experiencia en el rubro. Nos propusimos brindar la mayor variedad de tematicas y la mejor asesoria que un local puede ofrecerle a sus clietes. A poco meses de nuestro emprendimiento sufrimos una pandemia la cual nos dio el peor panorama posible, nos rehusamos a dejar pedecer nuestro proyecto e hicimos lo imposible por mantener el negocio a flote. 
                 </p>
             </div>
-            <div class="div">
-                <img class="img" src="../img/img_2.jpeg" alt="x">
-            </div>
+            <figure class="figure">
+                <img class="img" src="../img/gallery15.jpg" alt="x">
+            </figure>
         </section>
 
     <!-- --------------------------------- -->
 
         <section class="section-flex">
             <div class="div">
-                <img class="img" src="../img/img_2.jpeg" alt="x">
-            </div>
-            <div class="div">
-                <h3 class="h3"> Titulo</h3>
-                <p class="p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi unde voluptas molestiae suscipit deserunt eligendi corrupti repudiandae eos laudantium
+                <h3 class="h3">"A Donde Llegamos"</h3>
+                <p class="p">Hoy en dia somos un negocio que cuenta con 5 años de experiencia y pese a la pademia no bajamos la calidad de nuestros bienes y servicios. La gente nos sigue eligiendo todos los años para decorar sus fiestas gracias a la calidad atencion al cliente.
                 </p>
             </div>
+            <figure class="figure">
+                <img class="img" src="../img/gallery16.jpg" alt="x">
+            </figure>
         </section>
         
     </main>
 
     <footer class="footer">
-        <p class="text">Instagram</p>
-        <p class="text">Facebook</p>
+        <div class="footer__item">
+            <a class="text" href="https://www.facebook.com">@facebook</a>
+            <a class="text" href="https://www.instagram.com">@instagram</a>
+        </div>
+        <div class="footer__item container">
+            <p class="p">Para mas informacion contactanos a <a class="a" href="numero de telefono">"1234567890"</a></p>
+            <p class="p">Tambien podes visitar nuestro local en Av Calle Falsa 1234</p>
+        </div>
     </footer>
+    <script src="../js/bootstrap.bundle.js"></script>
 </body>
 </html>
