PF Garcia Agustin

--- a/nav/gallery.html
+++ b/nav/gallery.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="./index.html" class="logo">Cotillon Multicolor</a>
+            <a href="../index.html" class="logo">Cotillon Multicolor</a>
             <ul class="nav-menu">
                 <li class="nav-menu-item">
                     <a class="nav-menu-link nav-link" href="../index.html">Home</a>
